wip: horizontal scroll bug fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,6 +81,14 @@ p {
   margin: 0;
 }
 
+.react-horizontal-scrolling-menu--scroll-container::-webkit-scrollbar {
+  display: none;
+}
+.react-horizontal-scrolling-menu--scroll-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 #blogs h3 {
   margin: 0;
   font-size: 17px;
